--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <body
     class="w-full bg-no-repeat bg-center bg-cover"
     style="
-      background-image: url(dist/gambar/fotoMI.jpg);
+      background-image: url(dist/gambar/eskul/fotoMI.jpg);
       background-attachment: fixed;
     "
   >
@@ -350,28 +350,28 @@
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('/dist/gambar/reban.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/reban.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
               <div
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('/dist/gambar/vokal.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/vokal.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
               <div
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('/dist/gambar/voli.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/voli.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
               <div
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('/dist/gambar/catur.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/catur.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
             </div>
@@ -392,7 +392,7 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center mb-5 px-4 lg:w-1/2 bg-primary">
             <img
-              src="/dist/prestasi/1.jpg"
+              src="/dist/gambar/prestasi/1.jpg"
               alt="fulan"
               class="max-w-full mx-auto"
             />
@@ -417,7 +417,7 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center mb-5 px-4 lg:w-1/2 bg-primary">
             <img
-              src="/dist/prestasi/2.jpg"
+              src="/dist/gambar/prestasi/2.jpg"
               alt="fulan"
               class="max-w-full mx-auto"
             />
@@ -442,7 +442,7 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center mb-5 px-4 lg:w-1/2 bg-primary">
             <img
-              src="/dist/prestasi/3.jpg"
+              src="/dist/gambar/prestasi/3.jpg"
               alt="fulan"
               class="max-w-full mx-auto"
             />
@@ -475,12 +475,12 @@
         Tenaga Pendidik
       </h1>
       <div class="containerCarousel xl:w-1/4 lg:w-1/2" style="width: 43%">
-        <img src="dist/guru/8.jpg" class="m-3" />
-        <img src="dist/guru/8.jpg" class="m-3" />
-        <img src="dist/guru/8.jpg" class="m-3" />
-        <img src="dist/guru/8.jpg" class="m-3" />
-        <img src="dist/guru/8.jpg" class="m-3" />
-        <img src="dist/guru/8.jpg" class="m-3" />
+        <img src="dist/gambar/guru/8.jpg" class="m-3" />
+        <img src="dist/gambar/guru/8.jpg" class="m-3" />
+        <img src="dist/gambar/guru/8.jpg" class="m-3" />
+        <img src="dist/gambar/guru/8.jpg" class="m-3" />
+        <img src="dist/gambar/guru/8.jpg" class="m-3" />
+        <img src="dist/gambar/guru/8.jpg" class="m-3" />
       </div>
     </section>
     <!-- Para Guru end -->
