--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center mb-5 px-4 lg:w-1/2 bg-primary">
             <img
-              src="/dist/gambar/prestasi/1.jpg"
+              src="/dist/gambar/prestasi/satu.jpg"
               alt="fulan"
               class="max-w-full mx-auto"
             />
@@ -417,7 +417,7 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center mb-5 px-4 lg:w-1/2 bg-primary">
             <img
-              src="/dist/gambar/prestasi/2.jpg"
+              src="/dist/gambar/prestasi/dua.jpg"
               alt="fulan"
               class="max-w-full mx-auto"
             />
@@ -442,7 +442,7 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center mb-5 px-4 lg:w-1/2 bg-primary">
             <img
-              src="/dist/gambar/prestasi/3.jpg"
+              src="/dist/gambar/prestasi/tiga.jpg"
               alt="fulan"
               class="max-w-full mx-auto"
             />
