--- a/index.html
+++ b/index.html
@@ -350,28 +350,28 @@
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('dist/gambar/eskul/reban.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/reban.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
               <div
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('dist/gambar/eskul/vokal.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/vokal.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
               <div
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('dist/gambar/eskul/voli.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/voli.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
               <div
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('dist/gambar/eskul/catur.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/catur.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
             </div>
