hapus tanda / di setiap gambar

--- a/index.html
+++ b/index.html
@@ -346,9 +346,7 @@
             </h4>
 
             <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
-              <div
-                class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
-              >
+              <div>
                 <div
                   class="w-full h-full bg-[url('dist/gambar/eskul/reban.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
