ubah font navbar

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <li class="group">
                   <a
                     href="#profil"
-                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
+                    class="text-slate-500 py-2 mx-8 flex group-hover:text-primary text-sm font-bold"
                     >PROFIL SEKOLAH</a
                   >
                   <ul
@@ -96,28 +96,28 @@
                     <li>
                       <a
                         href="#sambutan"
-                        class="text-base text-dark py-2 mx-8 flex hover:text-slate-500"
+                        class="text-sm text-slate-500 font-bold py-2 mx-8 flex hover:text-slate-500"
                         >Sambutan Kepala Sekolah</a
                       >
                     </li>
                     <li class="group">
                       <a
                         href="#sejarah"
-                        class="text-base text-dark py-2 mx-8 flex hover:text-slate-500"
+                        class="text-sm text-slate-500 font-bold py-2 mx-8 flex hover:text-slate-500"
                         >Sejarah</a
                       >
                     </li>
                     <li class="group">
                       <a
                         href="#kondisi"
-                        class="text-base text-dark py-2 mx-8 flex hover:text-slate-500"
+                        class="text-sm text-slate-500 font-bold py-2 mx-8 flex hover:text-slate-500"
                         >Kondisi Sekolah</a
                       >
                     </li>
                     <li class="group">
                       <a
                         href="#tenaga-pendidik"
-                        class="text-base text-dark py-2 mx-8 flex hover:text-slate-500"
+                        class="text-sm text-slate-500 font-bold py-2 mx-8 flex hover:text-slate-500"
                         >Tenaga Pendidik</a
                       >
                     </li>
@@ -126,28 +126,28 @@
                 <li class="group">
                   <a
                     href="#berita"
-                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
+                    class="text-sm text-slate-500 font-bold py-2 mx-8 flex group-hover:text-primary"
                     >BERITA</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#eskul"
-                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
+                    class="text-sm text-slate-500 font-bold py-2 mx-8 flex group-hover:text-primary"
                     >EKSTRAKURIKULER</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#prestasi"
-                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
+                    class="text-sm text-slate-500 font-bold py-2 mx-8 flex group-hover:text-primary"
                     >PRESTASI</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#kontak"
-                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
+                    class="text-sm text-slate-500 font-bold py-2 mx-8 flex group-hover:text-primary"
                     >KONTAK</a
                   >
                 </li>
@@ -350,28 +350,28 @@
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('dist/gambar/eskul/reban.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/reban.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
               <div
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('dist/gambar/eskul/vokal.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/vokal.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
               <div
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('dist/gambar/eskul/voli.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/voli.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
               <div
                 class="h-15 bg-blue-500 aspect-video rounded-lg overflow-hidden group relative hover:scale-95 transition-all duration-500 xl:aspect-square"
               >
                 <div
-                  class="w-full h-full bg-[url('dist/gambar/eskul/catur.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
+                  class="w-full h-full bg-[url('/dist/gambar/eskul/catur.jpg')] bg-cover bg-center absolute group-hover:scale-125 transition-all duration-500"
                 ></div>
               </div>
             </div>
