menambahkan hover navbar

--- a/index.html
+++ b/index.html
@@ -96,28 +96,28 @@
                     <li>
                       <a
                         href="#sambutan"
-                        class="text-sm text-slate-500 font-bold py-2 mx-5 flex hover:text-slate-500"
+                        class="text-sm text-slate-500 font-bold py-2 mx-5 flex hover:text-primary"
                         >Sambutan Kepala Sekolah</a
                       >
                     </li>
                     <li class="group">
                       <a
                         href="#sejarah"
-                        class="text-sm text-slate-500 font-bold py-2 mx-5 flex hover:text-slate-500"
+                        class="text-sm text-slate-500 font-bold py-2 mx-5 flex hover:text-primary"
                         >Sejarah</a
                       >
                     </li>
                     <li class="group">
                       <a
                         href="#kondisi"
-                        class="text-sm text-slate-500 font-bold py-2 mx-5 flex hover:text-slate-500"
+                        class="text-sm text-slate-500 font-bold py-2 mx-5 flex hover:text-primary"
                         >Kondisi Sekolah</a
                       >
                     </li>
                     <li class="group">
                       <a
                         href="#tenaga-pendidik"
-                        class="text-sm text-slate-500 font-bold py-2 mx-5 flex hover:text-slate-500"
+                        class="text-sm text-slate-500 font-bold py-2 mx-5 flex hover:text-primary"
                         >Tenaga Pendidik</a
                       >
                     </li>
