--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <body
     class="w-full bg-no-repeat bg-center bg-cover"
     style="
-      background-image: url(dist/gambar/eskul/fotoMI.jpg);
+      background-image: url(../dist/gambar/eskul/fotoMI.jpg);
       background-attachment: fixed;
     "
   >
@@ -95,21 +95,21 @@
                   >
                     <li>
                       <a
-                        href="#sambutan"
+                        href="sambutan.html"
                         class="text-sm text-slate-500 font-bold py-2 mx-5 flex hover:text-primary"
                         >Sambutan Kepala Sekolah</a
                       >
                     </li>
                     <li class="group">
                       <a
-                        href="#sejarah"
+                        href="sejarah.html"
                         class="text-sm text-slate-500 font-bold py-2 mx-5 flex hover:text-primary"
                         >Sejarah</a
                       >
                     </li>
                     <li class="group">
                       <a
-                        href="#kondisi"
+                        href="kondisi.html"
                         class="text-sm text-slate-500 font-bold py-2 mx-5 flex hover:text-primary"
                         >Kondisi Sekolah</a
                       >
@@ -185,7 +185,7 @@
     <section id="about" class="pt-36 pb-28">
       <div class="container">
         <div class="flex flex-wrap">
-          <div class="wfull px-4 mb-10">
+          <div class="w-full px-4 mb-10">
             <h4 class="text-center text-white font-extrabold">VISI</h4>
             <p class="text-center text-2xl text-yellow-200">
               Menjadi sekolah yang berkomitmen untuk membangun karakter siswa
@@ -465,7 +465,7 @@
 
     <!-- Para Guru start -->
     <section
-      id="Tenaga Pendidik"
+      id="tenaga-pendidik"
       class="py-28 bg-slate-200 pr-0 pl-0"
       style="display: flex; flex-direction: column; align-items: center"
     >
