--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <body
     class="w-full bg-no-repeat bg-center bg-cover"
     style="
-      background-image: url(../dist/gambar/eskul/fotoMI.jpg);
+      background-image: url(dist/gambar/eskul/fotoMI.jpg);
       background-attachment: fixed;
     "
   >
